--- a/curso-css1.html
+++ b/curso-css1.html
@@ -39,14 +39,14 @@
         <aside class="sidebar">
             <h3>🎨 Conteúdo</h3>
             <ul>
-                <li><a href="curso-js1.html" class="active">Introdução</a></li>
-                <li><a href="curso-js2.html">Seletores e Propriedades</a></li>
-                <li><a href="curso-js3.html">Cores e Unidades</a></li>
-                <li><a href="curso-js4.html">Box Model</a></li>
-                <li><a href="curso-js5.html">Display e Layout</a></li>
-                <li><a href="curso-js6.html">Flexbox</a></li>
-                <li><a href="curso-js7.html">Grid Layout</a></li>
-                <li><a href="curso-js8.html">Responsividade</a></li>
+                 <li><a href="curso-css1.html" class="active">Introdução</a></li>
+                <li><a href="curso-css2.html">Seletores e Propriedades</a></li>
+                <li><a href="curso-css3.html">Cores e Unidades</a></li>
+                <li><a href="curso-css4.html">Box Model</a></li>
+                <li><a href="curso-css5.html">Display e Layout</a></li>
+                <li><a href="curso-css6.html">Flexbox</a></li>
+                <li><a href="curso-css7.html">Grid Layout</a></li>
+                <li><a href="curso-css8.html">Responsividade</a></li>
             </ul>
         </aside>
 
@@ -198,5 +198,6 @@
     </footer>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
