--- a/curso-html7.html
+++ b/curso-html7.html
@@ -220,7 +220,7 @@
 
             <div class="next-prev">
                 <a href="curso-html6.html" class="btn-cursos">Tabelas</a>
-                <a href="pratica.html" class="btn-cursos">Venha pratica</a>
+                <a href="pratica.html" class="btn-cursos">Venha praticar</a>
             </div>
 
         </main>
@@ -231,5 +231,6 @@
 
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
