--- a/curso-css8.html
+++ b/curso-css8.html
@@ -179,7 +179,7 @@
 
             <div class="next-prev">
                 <a href="curso-css7.html" class="btn-cursos">Grid Layout</a>
-                <a href="pratica.html" class="btn-cursos">Venha pratica</a>
+                <a href="pratica.html" class="btn-cursos">Venha praticar</a>
             </div>
 
         </main>
@@ -191,5 +191,6 @@
     </footer>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
