--- a/curso-js9.html
+++ b/curso-js9.html
@@ -191,7 +191,7 @@
 
                     <div class="next-prev">
                         <a href="curso-js8.html" class="btn-cursos">Arrays</a>
-                        <a href="pratica.html" class="btn-cursos">Venha pratica</a>
+                        <a href="pratica.html" class="btn-cursos">Venha praticar</a>
                     </div>
 
         </main>
@@ -202,5 +202,6 @@
     </footer>
 
 </body>
+
 
 </html>
