--- a/curso-js4.html
+++ b/curso-js4.html
@@ -206,7 +206,8 @@
     <footer>
         <p>© Desenvolvido pelos alunos do <span>3° INFO - 2025</span> | Byte&Byte</p>
     </footer>
-
+  <script src="js/main.js"></script>
 </body>
+
 
 </html>
