--- a/curso-js6.html
+++ b/curso-js6.html
@@ -210,7 +210,8 @@
     <footer>
         <p>© Desenvolvido pelos alunos do <span>3° INFO - 2025</span> | Byte&Byte</p>
     </footer>
-
+  <script src="js/main.js"></script>
 </body>
+
 
 </html>
