--- a/curso-js9.html
+++ b/curso-js9.html
@@ -200,8 +200,9 @@
     <footer>
         <p>© Desenvolvido pelos alunos do <span>3° INFO - 2025</span> | Byte&Byte</p>
     </footer>
-
+  <script src="js/main.js"></script>
 </body>
 
 
 </html>
+
