--- a/curso-js9.html
+++ b/curso-js9.html
@@ -167,25 +167,23 @@
             <h2>⭐ Exemplo Prático Completo</h2>
 
             <div class="code-example">
-                &lt;!DOCTYPE html&gt;
-&lt;html&gt;
-&lt;head&gt;
-    &lt;title&gt;JavaScript Alert Example&lt;/title&gt;
-    &lt;script&gt;
-        // Função JavaScript que exibe o alerta
-        function showAlert() {
-            alert("Hello, this is a JavaScript alert!");
-        }
-    &lt;/script&gt;
-&lt;/head&gt;
-&lt;body&gt;
-    &lt;h1&gt;Exemplo de Alerta JavaScript&lt;/h1&gt;
-    &lt;p&gt;Clique no botão abaixo para disparar o alerta:&lt;/p&gt;
-    
-    // O atributo onclick chama a função showAlert()
-    &lt;button onclick="showAlert()"&gt;Show Alert&lt;/button&gt;
-&lt;/body&gt;
-&lt;/html&gt;
+               &lt;!DOCTYPE html&gt; <br>
+&lt;html&gt;<br>
+&lt;head&gt;<br>
+    &lt;title&gt;JavaScript Alert Example&lt;/title&gt;<br>
+    &lt;script&gt;<br>
+        function showAlert() {<br>
+            alert("Hello, this is a JavaScript alert!");<br>
+        }<br>
+    &lt;/script&gt;<br>
+&lt;/head&gt;<br>
+&lt;body&gt;<br>
+    &lt;h1&gt;Exemplo de Alerta JavaScript&lt;/h1&gt;<br>
+    &lt;p&gt;Clique no botão abaixo para disparar o alerta:&lt;/p&gt;<br>
+    <br>
+    &lt;button onclick="showAlert()"&gt;Show Alert&lt;/button&gt;<br>
+&lt;/body&gt;<br>
+&lt;/html&gt;<br>
             </div>
 
             <div class="exercise-box">
@@ -215,5 +213,6 @@
 
 
 </html>
+
 
 
