--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <section class="banner">
                 <div class="banner-text">
                     <h1>Byte&Byte</h1>
-                    <p>No Byte&Byte, acreditamos que qualquer pessoa pode aprender a programar basta começar um byte
+                    <p>No Byte&Byte, acreditamos que qualquer pessoa pode
+                        aprender a programar basta começar um byte
                         de cada vez</p>
                     <a href="sobre.html" class="btn animate-btn">Saiba mais</a>
 
@@ -134,5 +135,6 @@
     </footer>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
